<resources>
    <string name="app_name">Roost\'s Paintball Wishlist</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_products">Products</string>
    <string name="action_wishlist">WishList</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="action_close">Close</string>
    <string name="statusNot">Not In WishList</string>
    <string name="statusIn">In WishList</string>
    <string name="add">Add To WishList</string>
    <string name="remove">Remove From WishList</string>
    <string name="rating">How bad do you want it?</string>
    <string name="image">Paintball Photo</string>
    <string name="prod_desc">Description</string>
</resources>
